<resources>
    <string name="app_name">binar-movie</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="profile">Profile</string>
    <string name="poster">Poster</string>
    <string name="retry">Retry</string>
    <string name="banner">Banner</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="first_air_date">First Air Date</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="binar_image">Binar Image</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_new_note">Add New Note</string>
    <string name="update_note">Update Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="update_success">Data updated successfully</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="delete_this_note">Delete this note</string>
    <string name="edit_this_note">Edit this note</string>
    <string name="registration_done">Registration Done</string>
    <string name="registration_success">Registration Success</string>
    <string name="registration_success_subtitle">Now you can login to use our app ~~~</string>
    <string name="new_note">New Note</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="logbook">Logbook</string>
    <string name="hi_username">Hi, %s</string>
    <string name="empty_note">Empty Note</string>
    <string name="empty_note_caption">So empty here, \n Lets create some notes!</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="birth_date">Birth Date</string>
    <string name="log_out">Log Out</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="go_to_favorite_movie">Go To Favorite Movie</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="go_to_favorite_tv_shows">Go To Favorite TV Shows</string>
    <string name="empty_bookmark">Empty Bookmark</string>
    <string name="your_bookmark_is_empty">Your bookmark is empty</string>

</resources>