<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.wiryadev.binar_movie.ui.movie.list.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.wiryadev.binar_movie.ui.tv.list.TvShowsFragment"
        android:label="@string/tv_shows"
        tools:layout="@layout/fragment_tv_shows" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.wiryadev.binar_movie.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>